force-app/main/default/objects/IndividualApplication/fields/nepa_project_type__c.field-meta.xml
<CustomField>
    <fullName>nepa_project_type__c</fullName>
    <description>Permit category that maps to the correct NEPA action plan template series. Used by NEPA_ActionPlan_Launcher flow to select the permit-type-specific milestone template for this process.</description>
    <inlineHelpText>Select the permit category that best describes this project. This determines which action plan template — with pre-built milestones and regulatory citations — is launched automatically.</inlineHelpText>
    <label>Project Type (Permit Category)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture and Public Lands</fullName>
            </value>
            <value>
                <fullName>Energy - Hydro and Transmission</fullName>
            </value>
            <value>
                <fullName>Energy - Nuclear and Waste</fullName>
            </value>
            <value>
                <fullName>Energy - Offshore</fullName>
            </value>
            <value>
                <fullName>Energy - Oil, Gas, Land, Coal</fullName>
            </value>
            <value>
                <fullName>Energy - Pipeline and LNG</fullName>
            </value>
            <value>
                <fullName>Energy - Renewables</fullName>
            </value>
            <value>
                <fullName>Materials and Mining</fullName>
            </value>
            <value>
                <fullName>Military, Urban, and Regulatory</fullName>
            </value>
            <value>
                <fullName>Transportation - Land</fullName>
            </value>
            <value>
                <fullName>Transportation - Water</fullName>
            </value>
            <value>
                <fullName>Water Resources</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>