force-app/main/default/objects/IndividualApplication/fields/nepa_projected_scoping_overrun_months__c.field-meta.xml
<CustomField><fullName>nepa_projected_scoping_overrun_months__c</fullName>
        <description>Projected number of months the scoping phase will exceed the agency baseline. Computed by NEPA_Timeline_Risk_Assessor as: (nepa_days_in_current_stage__c / 30) − Scoping_Cap_Months__c. Negative values indicate on-track.</description>
        <inlineHelpText>Months by which current scoping duration exceeds the agency-specific baseline cap. Negative = on track.</inlineHelpText>
        <label>Projected Scoping Overrun (Months)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </CustomField>