force-app/main/default/objects/IndividualApplication/fields/nepa_record_completeness__c.field-meta.xml
<CustomField><fullName>nepa_record_completeness__c</fullName>
        <description>Percentage (0-100) of required documents present at Approved or Published status for this process's review type. Recalculated by NEPA_Administrative_Record_Checker Flow whenever a ContentVersion record is created or updated.</description>
        <inlineHelpText>Administrative record completeness: percentage of required documents present. 100% required before final stage gates.</inlineHelpText>
        <label>Record Completeness</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </CustomField>