force-app/main/default/objects/IndividualApplication/fields/nepa_record_completeness_updated__c.field-meta.xml
<CustomField><fullName>nepa_record_completeness_updated__c</fullName>
        <description>Timestamp of the last completeness score recalculation.</description>
        <inlineHelpText>When the record completeness score was last recalculated.</inlineHelpText>
        <label>Completeness Updated</label>
        <type>DateTime</type>
    </CustomField>