force-app/main/default/objects/IndividualApplication/fields/nepa_regulatory_citation__c.field-meta.xml
<CustomField><fullName>nepa_regulatory_citation__c</fullName>
        <description>Regulatory citation the applicant believes applies (e.g., 10 CFR 1021 Appendix B, B1.3). Pre-filled by CE Screener; editable by permit manager.</description>
        <inlineHelpText>Regulatory citation for the applicable CE or review type.</inlineHelpText>
        <label>Regulatory Citation</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>