force-app/main/default/objects/IndividualApplication/fields/nepa_review_timeline_type__c.field-meta.xml
<CustomField><fullName>nepa_review_timeline_type__c</fullName>
        <description>Procedure type governing APA litigation exposure. Expedited/Emergency and Alternative Arrangement procedures with incomplete administrative records receive a 1.5x risk multiplier from NEPA_Litigation_Risk_Scorer. Standard procedures are unaffected.</description>
        <inlineHelpText>Standard, Expedited/Emergency (e.g. 14-day EA, 28-day EIS), or Alternative Arrangement. Expedited + incomplete record triggers APA risk penalty.</inlineHelpText>
        <label>Review Timeline Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Standard</fullName><default>true</default><label>Standard</label></value>
                <value><fullName>Expedited/Emergency</fullName><default>false</default><label>Expedited/Emergency</label></value>
                <value><fullName>Alternative Arrangement</fullName><default>false</default><label>Alternative Arrangement</label></value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>