force-app/main/default/objects/IndividualApplication/fields/nepa_review_type__c.field-meta.xml
<CustomField><fullName>nepa_review_type__c</fullName>
        <description>Level of NEPA review or other permit or authorization (Process Type per CEQ standard). For reference see Federal Environmental Review and Authorization Inventory.</description>
        <inlineHelpText>Level of NEPA review: EIS, EA, CE, or Other Authorization.</inlineHelpText>
        <label>NEPA Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EIS</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>Other Authorization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>