force-app/main/default/objects/IndividualApplication/fields/nepa_rfi_count__c.field-meta.xml
<CustomField><fullName>nepa_rfi_count__c</fullName>
        <description>Count of open RFI tasks against this application. Populated by record-triggered flow when nepa_submission_complete__c is false. Used by the intake completeness score and portal display.</description>
        <inlineHelpText>Number of open requests for information on this application.</inlineHelpText>
        <label>Open RFI Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>