force-app/main/default/objects/IndividualApplication/fields/nepa_risk_score__c.field-meta.xml
<CustomField><fullName>nepa_risk_score__c</fullName>
        <description>Composite litigation risk score (0-100) calculated from review type, lead agency litigation rate, circuit, and project sector. Recalculated by Flow on create/update.</description>
        <inlineHelpText>Composite risk score 0–100. Higher = greater litigation exposure based on historical PermitTEC patterns.</inlineHelpText>
        <label>Litigation Risk Score</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </CustomField>