force-app/main/default/objects/IndividualApplication/fields/nepa_risk_score_factors__c.field-meta.xml
<CustomField><fullName>nepa_risk_score_factors__c</fullName>
        <description>Semicolon-delimited list of contributing risk factor labels and their point values, written by the risk scoring Flow.</description>
        <inlineHelpText>Factors that contributed to the risk score (e.g., Review Type: EIS +40; Agency: Forest Service +15).</inlineHelpText>
        <label>Risk Score Factors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>