force-app/main/default/objects/IndividualApplication/fields/nepa_risk_score_is_ai__c.field-meta.xml
<CustomField><fullName>nepa_risk_score_is_ai__c</fullName>
        <description>Always true. Permanently indicates that nepa_risk_score__c is computed by NEPA_Litigation_Risk_Scorer using PermitTEC v0.1 historical data. Required by Salesforce AI AUP: AI-generated scores must be disclosed as such. Field is formula-driven and cannot be overwritten.</description>
        <inlineHelpText>This risk score is AI-computed from PermitTEC v0.1 historical litigation data. Treat as analytical guidance — not a legal determination.</inlineHelpText>
        <formula>TRUE</formula>
        <label>Risk Score is AI-Generated</label>
        <type>Checkbox</type>
    </CustomField>