force-app/main/default/objects/IndividualApplication/fields/nepa_risk_score_updated__c.field-meta.xml
<CustomField><fullName>nepa_risk_score_updated__c</fullName>
        <description>Timestamp of the last risk score calculation. Use to identify stale scores when metadata weights are updated.</description>
        <inlineHelpText>When the risk score was last calculated.</inlineHelpText>
        <label>Risk Score Updated</label>
        <type>DateTime</type>
    </CustomField>