force-app/main/default/objects/IndividualApplication/fields/nepa_risk_tier__c.field-meta.xml
<CustomField><fullName>nepa_risk_tier__c</fullName>
        <description>Human-readable litigation risk tier derived from nepa_risk_score__c. Low (0-24), Moderate (25-49), High (50-74), Very High (75-100).</description>
        <inlineHelpText>Risk tier: Low / Moderate / High / Very High.</inlineHelpText>
        <label>Risk Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>