force-app/main/default/objects/IndividualApplication/fields/nepa_scoping_overrun_flag__c.field-meta.xml
<CustomField><fullName>nepa_scoping_overrun_flag__c</fullName>
        <description>Set to true by NEPA_Timeline_Risk_Assessor when the time spent in the Scoping stage exceeds the agency-specific Scoping_Cap_Months__c from NEPA_Agency_Scoping_Baseline__mdt. Elevates timeline risk tier and triggers early warning.</description>
        <inlineHelpText>Scoping phase has exceeded the agency-specific baseline duration. Review scoping scope and resource allocation.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Scoping Overrun Flag</label>
        <type>Checkbox</type>
    </CustomField>