force-app/main/default/objects/IndividualApplication/fields/nepa_screener_last_run__c.field-meta.xml
<CustomField><fullName>nepa_screener_last_run__c</fullName>
        <description>Timestamp stamped by NEPA_CE_Screener immediately before it writes screening results. NEPA_Litigation_Risk_Scorer reads this to skip re-firing when nepa_review_type__c was changed by the screener rather than by a human. Guards against the CE Screener → Risk Scorer → CE Screener recursion chain.</description>
        <inlineHelpText>Populated automatically by the CE Screener. Do not edit manually.</inlineHelpText>
        <label>Screener Last Run</label>
        <type>DateTime</type>
    </CustomField>