force-app/main/default/objects/IndividualApplication/fields/nepa_sector_circuit_win_rate__c.field-meta.xml
<CustomField><fullName>nepa_sector_circuit_win_rate__c</fullName>
        <description>Agency win rate percentage for the sector-circuit combination derived from PermitTEC v0.1 litigation corpus (Stage 13 matrix). Set by NEPA_Challenge_Predictor or NEPA_Litigation_Risk_Scorer when a matching NEPA_Sector_Circuit_Risk__mdt record exists.</description>
        <inlineHelpText>Historical agency win rate for this project's sector and judicial circuit combination. Lower values indicate higher litigation risk.</inlineHelpText>
        <label>Sector-Circuit Win Rate (%)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </CustomField>