force-app/main/default/objects/IndividualApplication/fields/nepa_sla_due_date__c.field-meta.xml
<CustomField><fullName>nepa_sla_due_date__c</fullName>
        <description>Computed SLA deadline: nepa_start_date__c + NEPA_SLA_Config__mdt.Total_Days__c for the matching review type. Set by NEPA_SLA_Due_Date_Setter on create or when nepa_review_type__c / nepa_start_date__c changes. NULL until both fields are populated.</description>
        <inlineHelpText>Statutory deadline for this review. Computed automatically from start date and review type.</inlineHelpText>
        <label>SLA Due Date</label>
        <type>Date</type>
    </CustomField>