force-app/main/default/objects/IndividualApplication/fields/nepa_sla_overdue__c.field-meta.xml
<CustomField><fullName>nepa_sla_overdue__c</fullName>
        <description>Set to true by NEPA_SLA_Escalation_Monitor when TODAY &gt; nepa_sla_due_date__c and the process is not yet completed or cancelled. Drives list views, dashboard tiles, and secondary escalation notifications.</description>
        <inlineHelpText>Process has passed its SLA due date without reaching a terminal status.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>SLA Overdue</label>
        <type>Checkbox</type>
    </CustomField>