force-app/main/default/objects/IndividualApplication/fields/nepa_sla_warning_sent__c.field-meta.xml
<CustomField><fullName>nepa_sla_warning_sent__c</fullName>
        <description>Set to true by NEPA_SLA_Escalation_Monitor when TODAY &gt;= nepa_sla_due_date__c - Warning_Days. Prevents duplicate warning notifications on subsequent daily runs. Reset to false when nepa_sla_due_date__c changes (new review type or start date correction).</description>
        <inlineHelpText>Warning notification has been sent for this SLA deadline.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>SLA Warning Sent</label>
        <type>Checkbox</type>
    </CustomField>