force-app/main/default/objects/IndividualApplication/fields/nepa_submission_complete__c.field-meta.xml
<CustomField><fullName>nepa_submission_complete__c</fullName>
        <description>Set to true when the application package is confirmed complete by agency staff. Triggers downstream intake workflow and stops RFI creation.</description>
        <inlineHelpText>Check when the application package has been confirmed complete.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Submission Complete</label>
        <type>Checkbox</type>
    </CustomField>