force-app/main/default/objects/IndividualApplication/fields/nepa_target_completion_date__c.field-meta.xml
<CustomField><fullName>nepa_target_completion_date__c</fullName>
        <description>Target completion date set at Action Plan creation based on review type default durations (CE: 30 days, EA: 180 days, EIS: 730 days). May be updated by NEPA coordinator.</description>
        <inlineHelpText>Target completion date (set at process initiation based on review type).</inlineHelpText>
        <label>Target Completion Date</label>
        <type>Date</type>
    </CustomField>