force-app/main/default/objects/IndividualApplication/fields/nepa_tiering_to_prior_eis__c.field-meta.xml
<CustomField><fullName>nepa_tiering_to_prior_eis__c</fullName>
        <description>True when this EA or EIS is explicitly tiered from a prior programmatic EIS under 40 CFR 1502.20. Triggers VR-006: if the prior EIS is older than 5 years (nepa_prior_nepa_date__c), requires a supplementation review determination before proceeding.</description>
        <inlineHelpText>This process tiers from a prior programmatic EIS. A supplementation review is required if the prior EIS is more than 5 years old.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Tiering to Prior EIS</label>
        <type>Checkbox</type>
    </CustomField>