force-app/main/default/objects/IndividualApplication/fields/nepa_timeline_risk_tier__c.field-meta.xml
<CustomField><fullName>nepa_timeline_risk_tier__c</fullName>
        <description>Current timeline risk tier derived from days in current stage vs. review-type baseline. On Track: within expected range; At Risk: 10-25% over baseline; Stalled: 25-50% over baseline; Overdue: 50%+ over baseline. Written by NEPA_Timeline_Risk_Assessor Flow.</description>
        <inlineHelpText>Timeline risk classification for this process. Updated automatically by Flow when stage or status changes.</inlineHelpText>
        <label>Timeline Risk Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Stalled</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>