force-app/main/default/objects/IndividualApplication/fields/nepa_total_pages__c.field-meta.xml
<CustomField><fullName>nepa_total_pages__c</fullName>
        <description>Total page count of the NEPA document package for this process. CE documents median 3-8 pages; EA 30-200; EIS 200+. Strong numeric discriminator (lift 0.68 in NEPATEC corpus). Used by CE Screener as a confidence modifier and by QA rules to flag implausibly thin documents.</description>
        <inlineHelpText>Total pages in the NEPA document package. CE: typically 3-8 pages; EA: 30-200; EIS: 200+.</inlineHelpText>
        <label>Total Pages</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>