force-app/main/default/objects/IndividualApplication/fields/nepa_tribal_consultation_count__c.field-meta.xml
<CustomField>
    <fullName>nepa_tribal_consultation_count__c</fullName>
    <description>Rollup count of certified Tribal Consultation engagement events on this process. Used by VR-005 in NEPA_Stage_Gate to block stage advance to Final EIS Preparation or Record of Decision when nepa_tribal_plaintiff_flag__c is true and no certified consultation exists.</description>
    <inlineHelpText>Count of Tribal Consultation events with Consultation Certified checked. Must be at least 1 before advancing to Final EIS or ROD when a tribal plaintiff flag is set.</inlineHelpText>
    <label>Certified Tribal Consultation Count</label>
    <summarizedField>nepa_engagement__c.nepa_consultation_certified__c</summarizedField>
    <summaryFilterItems>
        <field>nepa_engagement__c.nepa_engagement_type__c</field>
        <operation>equals</operation>
        <value>Tribal Consultation</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>nepa_engagement__c.nepa_consultation_certified__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>nepa_engagement__c.nepa_process__c</summaryForeignKey>
    <summaryOperation>COUNT</summaryOperation>
    <type>Summary</type>
</CustomField>