force-app/main/default/objects/IndividualApplication/fields/nepa_waiver_invoked__c.field-meta.xml
<CustomField><fullName>nepa_waiver_invoked__c</fullName>
        <description>True when the agency is asserting a statutory NEPA waiver (e.g., IIRIRA Section 102(c), EPAct Section 390). Triggers VR-003 validation rule: blocks save without an attached OGC legal sufficiency memo and valid funding authority citation per 42 USC 4332(2)(C).</description>
        <inlineHelpText>Check only when a statutory NEPA waiver applies. Requires OGC legal sufficiency memo before project can advance.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>NEPA Waiver Invoked</label>
        <type>Checkbox</type>
    </CustomField>