force-app/main/default/objects/IndividualApplication/fields/nepa_waiver_statute_cite__c.field-meta.xml
<CustomField><fullName>nepa_waiver_statute_cite__c</fullName>
        <description>Required when nepa_waiver_invoked__c is true. Must cite the specific statutory provision authorizing the NEPA waiver (e.g., IIRIRA Section 102(c); EPAct 2005 Section 390). VR-003 blocks save when this is blank and nepa_waiver_invoked__c is true.</description>
        <inlineHelpText>Statutory citation for the NEPA waiver (e.g., IIRIRA 102(c)). Required when waiver is invoked.</inlineHelpText>
        <label>Waiver Statute Citation</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>