force-app/main/default/objects/IndividualApplication/fields/nepa_wetlands_flag__c.field-meta.xml
<CustomField>
    <fullName>nepa_wetlands_flag__c</fullName>
    <description>Set to true by NEPA_GIS_Proximity_Check when FWS National Wetlands Inventory (NWI) polygon intersects the project buffer (1.0 mile). More precise than NHD waterway proximity for CWA Section 404 triggering — NHD identifies waterways, NWI identifies wetland extent. Used by NEPA_Permit_Coordinator GIS augmentation and NEPA_Permit_Record_Creator GIS bridge.</description>
    <inlineHelpText>FWS NWI wetland polygon within 1.0 mile of project. CWA Section 404 permit required. More specific than NHD waterway flag — triggers only on mapped wetland extent.</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Wetlands Proximity Flag (NWI)</label>
    <type>Checkbox</type>
</CustomField>