force-app/main/default/objects/IndividualApplication/fields/nepa_wild_scenic_river_flag__c.field-meta.xml
<CustomField>
    <fullName>nepa_wild_scenic_river_flag__c</fullName>
    <description>Set to true by NEPA_GIS_Proximity_Check when the project location intersects or is within the buffer of a designated Wild and Scenic River segment. Triggers Wild and Scenic Rivers Act Section 7 compliance review and Rivers and Harbors Act Section 10 permit requirement. Source: USFS EDW Wild and Scenic River Segments MapServer.</description>
    <inlineHelpText>Project intersects a Wild and Scenic River corridor. Wild and Scenic Rivers Act Section 7 compliance and Rivers and Harbors Act Section 10 permit required.</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Wild and Scenic River Flag</label>
    <type>Checkbox</type>
</CustomField>